<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/match_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_gravity="center_horizontal"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/SportPlaceholder"
            android:id="@+id/sportPH"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:textStyle="bold"
            android:text="@string/home_team_placeholder"
            android:id="@+id/teampPH"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_horizontal" />
        <com.google.android.material.textview.MaterialTextView
            android:text="@string/commencetime"
            android:textStyle="bold"
            android:id="@+id/timePH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </LinearLayout>
</androidx.cardview.widget.CardView>