<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/match_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="horizontal"
    android:background="@color/drawColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:layout_weight="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:gravity="center_horizontal" />
    <TextView
        android:textColor="@color/cardview_light_background"
        android:textAlignment="center"
        android:layout_weight="0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw"
        android:gravity="center_horizontal" />
    <TextView
        android:textColor="@color/cardview_light_background"
        android:textAlignment="center"
        android:layout_weight="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/away"
        android:gravity="center_horizontal" />
</androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@color/drawColor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/cardview_light_background"
            android:id="@+id/homeOdds"
            android:layout_weight="0.3"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5.40"
            android:gravity="center_horizontal" />
        <TextView
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            android:id="@+id/drawOdds"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.00"
            android:gravity="center_horizontal" />
        <TextView
            android:textColor="@color/cardview_light_background"
            android:textAlignment="center"
            android:id="@+id/awayOdds"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.80"
            android:gravity="center_horizontal" />
    </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/drawColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@color/cardview_light_background"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pick :"
                android:gravity="center_horizontal" />
            <TextView
                android:background="@color/winColor"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</androidx.cardview.widget.CardView>